--- a/WBooks/AddNew/AddNewView.xib
+++ b/WBooks/AddNew/AddNewView.xib
@@ -10,21 +10,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddNewView" customModule="WBooks" customModuleProvider="target">
             <connections>
-                <outlet property="addButtonImage" destination="QTa-Z8-MvE" id="REm-AH-L7k"/>
-                <outlet property="addImage" destination="G0k-ot-45G" id="WZt-ys-3pj"/>
-                <outlet property="addNewView" destination="URU-lz-rkY" id="IP8-sH-cE3"/>
-                <outlet property="authorBook" destination="gjp-5s-M1V" id="EWW-hs-GKf"/>
-                <outlet property="backgroundView" destination="iN0-l3-epB" id="ZtP-Hf-CHg"/>
-                <outlet property="descriptionBook" destination="BAg-oi-Ot2" id="oqi-fd-Dbl"/>
-                <outlet property="fiveSingleLine" destination="2A2-DG-tji" id="KOJ-oG-CQ4"/>
-                <outlet property="fourSingleLine" destination="oxj-PQ-xP5" id="3T1-yI-jcz"/>
-                <outlet property="genreBook" destination="s3c-xU-rRc" id="lgR-nm-aYY"/>
-                <outlet property="oneSingleLine" destination="1HL-5M-opS" id="Ye5-zc-4on"/>
-                <outlet property="submitButton" destination="PjM-0t-i1D" id="CXa-k4-SPd"/>
-                <outlet property="threeSingleLine" destination="nx1-mv-GWP" id="sgR-Fq-cya"/>
-                <outlet property="titleBook" destination="gKp-do-A2b" id="AVY-fB-eOX"/>
-                <outlet property="twoSingleLine" destination="j74-zt-0hX" id="tKJ-54-y5N"/>
-                <outlet property="yearBook" destination="JgO-Yj-kjQ" id="nE5-eM-rc1"/>
+                <outlet property="addButtonImage" destination="QTa-Z8-MvE" id="D5y-4C-7uw"/>
+                <outlet property="addImage" destination="G0k-ot-45G" id="Nz9-rT-buO"/>
+                <outlet property="addNewView" destination="URU-lz-rkY" id="Zhc-sS-6Nh"/>
+                <outlet property="authorBook" destination="gjp-5s-M1V" id="l76-Jl-rkN"/>
+                <outlet property="backgroundView" destination="iN0-l3-epB" id="wdG-wh-cQ0"/>
+                <outlet property="descriptionBook" destination="BAg-oi-Ot2" id="afe-aH-9HA"/>
+                <outlet property="genreBook" destination="s3c-xU-rRc" id="C4x-Wr-JFF"/>
+                <outlet property="submitButton" destination="PjM-0t-i1D" id="hNU-ye-UXz"/>
+                <outlet property="titleBook" destination="gKp-do-A2b" id="LxJ-3X-qCc"/>
+                <outlet property="yearBook" destination="JgO-Yj-kjQ" id="vNt-0Z-wVW"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -43,22 +38,15 @@
                                 <constraint firstAttribute="width" constant="100" id="w4s-Tb-kIR"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gKp-do-A2b">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gKp-do-A2b" customClass="InputFields" customModule="WBooks" customModuleProvider="target">
                             <rect key="frame" x="25" y="158" width="275" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="P5c-uN-fWr"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1HL-5M-opS">
-                            <rect key="frame" x="25" y="188" width="275" height="0.0"/>
-                            <color key="backgroundColor" systemColor="systemGrayColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" id="Bsd-2B-YYj"/>
-                            </constraints>
-                        </view>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gjp-5s-M1V">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gjp-5s-M1V" customClass="InputFields" customModule="WBooks" customModuleProvider="target">
                             <rect key="frame" x="25" y="208" width="275" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="ZYe-Bb-JdR"/>
@@ -66,14 +54,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j74-zt-0hX">
-                            <rect key="frame" x="25" y="238" width="275" height="0.0"/>
-                            <color key="backgroundColor" systemColor="systemGrayColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" id="R2z-kF-cUY"/>
-                            </constraints>
-                        </view>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JgO-Yj-kjQ">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JgO-Yj-kjQ" customClass="InputFields" customModule="WBooks" customModuleProvider="target">
                             <rect key="frame" x="25" y="258" width="275" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="Va9-RC-p0d"/>
@@ -81,14 +62,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nx1-mv-GWP">
-                            <rect key="frame" x="25" y="288" width="275" height="0.0"/>
-                            <color key="backgroundColor" systemColor="systemGrayColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" id="QjV-G2-cbR"/>
-                            </constraints>
-                        </view>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s3c-xU-rRc">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s3c-xU-rRc" customClass="InputFields" customModule="WBooks" customModuleProvider="target">
                             <rect key="frame" x="25" y="308" width="275" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="uLM-O5-lGN"/>
@@ -96,14 +70,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oxj-PQ-xP5">
-                            <rect key="frame" x="25" y="338" width="275" height="0.0"/>
-                            <color key="backgroundColor" systemColor="systemGrayColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" id="9P9-ae-UZl"/>
-                            </constraints>
-                        </view>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BAg-oi-Ot2">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BAg-oi-Ot2" customClass="InputFields" customModule="WBooks" customModuleProvider="target">
                             <rect key="frame" x="25" y="358" width="275" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="ZnA-rp-ZKM"/>
@@ -111,13 +78,6 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2A2-DG-tji">
-                            <rect key="frame" x="25" y="388" width="275" height="0.0"/>
-                            <color key="backgroundColor" systemColor="systemGrayColor"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" id="pkX-mx-ese"/>
-                            </constraints>
-                        </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PjM-0t-i1D">
                             <rect key="frame" x="25" y="438" width="275" height="46"/>
                             <constraints>
@@ -139,43 +99,28 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="s3c-xU-rRc" secondAttribute="trailing" constant="25" id="0MP-H2-GXk"/>
-                        <constraint firstItem="nx1-mv-GWP" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="2Fr-NX-JO5"/>
                         <constraint firstAttribute="trailing" secondItem="gKp-do-A2b" secondAttribute="trailing" constant="25" id="4od-JF-d1D"/>
                         <constraint firstItem="G0k-ot-45G" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="57A-6P-RA2"/>
-                        <constraint firstItem="2A2-DG-tji" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="6kk-VP-9dX"/>
-                        <constraint firstItem="oxj-PQ-xP5" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="8Tr-9F-Gtl"/>
-                        <constraint firstItem="JgO-Yj-kjQ" firstAttribute="top" secondItem="j74-zt-0hX" secondAttribute="bottom" constant="20" id="BbT-FI-Kok"/>
                         <constraint firstItem="gKp-do-A2b" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="DIv-kl-o0Y"/>
                         <constraint firstItem="gKp-do-A2b" firstAttribute="top" secondItem="QTa-Z8-MvE" secondAttribute="bottom" constant="33" id="FJK-JL-u6l"/>
                         <constraint firstAttribute="trailing" secondItem="gjp-5s-M1V" secondAttribute="trailing" constant="25" id="G9h-zF-yeT"/>
                         <constraint firstAttribute="trailing" secondItem="PjM-0t-i1D" secondAttribute="trailing" constant="25" id="GGp-g0-QBQ"/>
                         <constraint firstItem="QTa-Z8-MvE" firstAttribute="top" secondItem="URU-lz-rkY" secondAttribute="top" constant="25" id="L1n-pN-xSc"/>
                         <constraint firstItem="BAg-oi-Ot2" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="Ogd-aX-uOS"/>
-                        <constraint firstAttribute="trailing" secondItem="oxj-PQ-xP5" secondAttribute="trailing" constant="25" id="Pa2-qb-wx7"/>
-                        <constraint firstItem="gjp-5s-M1V" firstAttribute="top" secondItem="1HL-5M-opS" secondAttribute="bottom" constant="20" id="QFg-0i-0pc"/>
                         <constraint firstAttribute="trailing" secondItem="JgO-Yj-kjQ" secondAttribute="trailing" constant="25" id="Qij-iH-WiL"/>
-                        <constraint firstItem="oxj-PQ-xP5" firstAttribute="top" secondItem="s3c-xU-rRc" secondAttribute="bottom" id="Rju-Xf-lZ9"/>
-                        <constraint firstAttribute="trailing" secondItem="j74-zt-0hX" secondAttribute="trailing" constant="25" id="SXG-T8-1wy"/>
-                        <constraint firstItem="j74-zt-0hX" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="U9m-3e-QOf"/>
-                        <constraint firstItem="j74-zt-0hX" firstAttribute="top" secondItem="gjp-5s-M1V" secondAttribute="bottom" id="XIg-sM-pgC"/>
-                        <constraint firstItem="2A2-DG-tji" firstAttribute="top" secondItem="BAg-oi-Ot2" secondAttribute="bottom" id="Y5N-xp-onu"/>
-                        <constraint firstAttribute="trailing" secondItem="nx1-mv-GWP" secondAttribute="trailing" constant="25" id="YrU-l2-z7w"/>
                         <constraint firstItem="PjM-0t-i1D" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="ZdZ-0u-6rl"/>
                         <constraint firstItem="JgO-Yj-kjQ" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="aHk-jJ-Kfy"/>
                         <constraint firstAttribute="trailing" secondItem="BAg-oi-Ot2" secondAttribute="trailing" constant="25" id="aPC-zC-MTr"/>
+                        <constraint firstItem="JgO-Yj-kjQ" firstAttribute="top" secondItem="gjp-5s-M1V" secondAttribute="bottom" constant="20" id="bBd-xZ-pKT"/>
                         <constraint firstItem="s3c-xU-rRc" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="dWX-Ud-SiE"/>
+                        <constraint firstItem="gjp-5s-M1V" firstAttribute="top" secondItem="gKp-do-A2b" secondAttribute="bottom" constant="20" id="e0b-NE-t1u"/>
                         <constraint firstItem="G0k-ot-45G" firstAttribute="top" secondItem="URU-lz-rkY" secondAttribute="top" constant="25" id="emW-S2-dtm"/>
-                        <constraint firstAttribute="trailing" secondItem="2A2-DG-tji" secondAttribute="trailing" constant="25" id="en0-uE-d4q"/>
+                        <constraint firstItem="BAg-oi-Ot2" firstAttribute="top" secondItem="s3c-xU-rRc" secondAttribute="bottom" constant="20" id="euw-AQ-Ofx"/>
                         <constraint firstItem="gjp-5s-M1V" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="f8F-QK-MXg"/>
-                        <constraint firstItem="1HL-5M-opS" firstAttribute="top" secondItem="gKp-do-A2b" secondAttribute="bottom" id="fbY-rx-mna"/>
+                        <constraint firstItem="PjM-0t-i1D" firstAttribute="top" secondItem="BAg-oi-Ot2" secondAttribute="bottom" constant="50" id="g7T-iU-6r0"/>
                         <constraint firstItem="QTa-Z8-MvE" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="hnZ-aR-cLF"/>
-                        <constraint firstItem="PjM-0t-i1D" firstAttribute="top" secondItem="2A2-DG-tji" secondAttribute="bottom" constant="50" id="m3j-Kx-bAL"/>
-                        <constraint firstAttribute="trailing" secondItem="1HL-5M-opS" secondAttribute="trailing" constant="25" id="nWe-Z5-Ijg"/>
-                        <constraint firstItem="s3c-xU-rRc" firstAttribute="top" secondItem="nx1-mv-GWP" secondAttribute="bottom" constant="20" id="olM-kv-hct"/>
-                        <constraint firstItem="nx1-mv-GWP" firstAttribute="top" secondItem="JgO-Yj-kjQ" secondAttribute="bottom" id="wOp-Zh-c2x"/>
                         <constraint firstItem="gKp-do-A2b" firstAttribute="top" secondItem="G0k-ot-45G" secondAttribute="bottom" constant="33" id="wat-Uh-0rA"/>
-                        <constraint firstItem="1HL-5M-opS" firstAttribute="leading" secondItem="URU-lz-rkY" secondAttribute="leading" constant="25" id="x1E-U7-Q8a"/>
-                        <constraint firstItem="BAg-oi-Ot2" firstAttribute="top" secondItem="oxj-PQ-xP5" secondAttribute="bottom" constant="20" id="y3b-Vh-Vyi"/>
+                        <constraint firstItem="s3c-xU-rRc" firstAttribute="top" secondItem="JgO-Yj-kjQ" secondAttribute="bottom" constant="20" id="xxw-MO-f6k"/>
                     </constraints>
                 </view>
             </subviews>
@@ -190,12 +135,26 @@
             <point key="canvasLocation" x="138.40000000000001" y="20.239880059970016"/>
         </view>
     </objects>
+    <designables>
+        <designable name="BAg-oi-Ot2">
+            <size key="intrinsicContentSize" width="-1" height="35"/>
+        </designable>
+        <designable name="JgO-Yj-kjQ">
+            <size key="intrinsicContentSize" width="-1" height="35"/>
+        </designable>
+        <designable name="gKp-do-A2b">
+            <size key="intrinsicContentSize" width="-1" height="35"/>
+        </designable>
+        <designable name="gjp-5s-M1V">
+            <size key="intrinsicContentSize" width="-1" height="35"/>
+        </designable>
+        <designable name="s3c-xU-rRc">
+            <size key="intrinsicContentSize" width="-1" height="35"/>
+        </designable>
+    </designables>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
