--- a/WBooks/Login/LoginView.xib
+++ b/WBooks/Login/LoginView.xib
@@ -11,9 +11,9 @@
             <connections>
                 <outlet property="backgroundImage" destination="0Cf-6h-v1q" id="af5-pV-aTT"/>
                 <outlet property="iconImage" destination="3hX-oM-ebC" id="QSQ-d4-ds4"/>
-                <outlet property="passwordTextField" destination="BnA-df-iyC" id="phu-Wr-1NC"/>
+                <outlet property="passwordTextField" destination="BnA-df-iyC" id="vTo-VC-lQK"/>
                 <outlet property="signinButton" destination="6la-wz-0gZ" id="Yak-Bx-ilb"/>
-                <outlet property="usernameTextField" destination="Mry-hR-UWo" id="leu-j0-4Pa"/>
+                <outlet property="usernameTextField" destination="Mry-hR-UWo" id="iKW-34-nO4"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
