--- a/WBooks/Login/LoginView.xib
+++ b/WBooks/Login/LoginView.xib
@@ -11,9 +11,9 @@
             <connections>
                 <outlet property="backgroundImage" destination="0Cf-6h-v1q" id="af5-pV-aTT"/>
                 <outlet property="iconImage" destination="3hX-oM-ebC" id="QSQ-d4-ds4"/>
-                <outlet property="passwordTextField" destination="BnA-df-iyC" id="vTo-VC-lQK"/>
+                <outlet property="passwordTextField" destination="BnA-df-iyC" id="onU-AY-eV3"/>
                 <outlet property="signinButton" destination="6la-wz-0gZ" id="Yak-Bx-ilb"/>
-                <outlet property="usernameTextField" destination="Mry-hR-UWo" id="iKW-34-nO4"/>
+                <outlet property="usernameTextField" destination="Mry-hR-UWo" id="8Li-Yq-eDP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,7 +31,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xLI-H5-779">
                             <rect key="frame" x="36" y="244" width="307" height="196"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mry-hR-UWo">
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mry-hR-UWo" customClass="LoginTextField" customModule="WBooks" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="307" height="52"/>
                                     <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                     <constraints>
@@ -40,7 +40,7 @@
                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" textContentType="username"/>
                                 </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="BnA-df-iyC">
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="BnA-df-iyC" customClass="LoginTextField" customModule="WBooks" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="72" width="307" height="52"/>
                                     <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                     <constraints>
