--- a/WBooks/Rentals/RentalsView.xib
+++ b/WBooks/Rentals/RentalsView.xib
@@ -3,20 +3,48 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RentalsView" customModule="WBooks" customModuleProvider="target">
             <connections>
+                <outlet property="headerTableView" destination="w2u-AC-M5J" id="qT9-7o-AU9"/>
                 <outlet property="rentalsView" destination="iN0-l3-epB" id="x42-EK-stS"/>
+                <outlet property="suggeryBooksView" destination="zEA-0z-RjX" id="Q3y-hN-5bx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w2u-AC-M5J">
+                    <rect key="frame" x="24" y="67" width="342" height="330"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="330" id="zYx-5b-elC"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zEA-0z-RjX">
+                    <rect key="frame" x="25" y="685" width="340" height="105"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="105" id="FdI-RB-REg"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="FYx-oC-hKo"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="FYx-oC-hKo" firstAttribute="trailing" secondItem="w2u-AC-M5J" secondAttribute="trailing" constant="24" id="28c-U8-T0z"/>
+                <constraint firstItem="FYx-oC-hKo" firstAttribute="trailing" secondItem="zEA-0z-RjX" secondAttribute="trailing" constant="25" id="Ctw-wA-RS2"/>
+                <constraint firstItem="w2u-AC-M5J" firstAttribute="leading" secondItem="FYx-oC-hKo" secondAttribute="leading" constant="24" id="Gv7-Wk-Hwa"/>
+                <constraint firstItem="zEA-0z-RjX" firstAttribute="leading" secondItem="FYx-oC-hKo" secondAttribute="leading" constant="25" id="e8S-0a-IiN"/>
+                <constraint firstItem="FYx-oC-hKo" firstAttribute="bottom" secondItem="zEA-0z-RjX" secondAttribute="bottom" constant="20" id="jEx-QB-YNB"/>
+                <constraint firstItem="w2u-AC-M5J" firstAttribute="top" secondItem="FYx-oC-hKo" secondAttribute="top" constant="20" id="zQT-ce-Heg"/>
+            </constraints>
             <point key="canvasLocation" x="4.615384615384615" y="20.616113744075829"/>
         </view>
     </objects>
