--- a/WBooks/DetailsComponents/BookInfo/BookInfoView.xib
+++ b/WBooks/DetailsComponents/BookInfo/BookInfoView.xib
@@ -39,32 +39,32 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V3p-el-mx9">
-                    <rect key="frame" x="103" y="43" width="212" height="19.333333333333329"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V3p-el-mx9">
+                    <rect key="frame" x="103" y="43" width="212" height="19"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvy-am-of0">
-                    <rect key="frame" x="103" y="64.333333333333329" width="212" height="17"/>
+                    <rect key="frame" x="103" y="64" width="212" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ble-NF-VPX">
-                    <rect key="frame" x="103" y="83.333333333333329" width="212" height="17"/>
+                    <rect key="frame" x="103" y="83" width="212" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jTS-Ls-76Q">
-                    <rect key="frame" x="103" y="102.33333333333333" width="212" height="17"/>
+                    <rect key="frame" x="103" y="102" width="212" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GoH-eG-9Ja">
-                    <rect key="frame" x="25" y="145.33333333333334" width="277" height="46"/>
+                    <rect key="frame" x="25" y="145" width="277" height="46"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="46" id="HVb-zG-UQS"/>
                     </constraints>
@@ -75,7 +75,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zl1-mb-IPG">
-                    <rect key="frame" x="25" y="201.33333333333334" width="277" height="46"/>
+                    <rect key="frame" x="25" y="201" width="277" height="46"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="46" id="9Gx-oU-q2t"/>
                     </constraints>
@@ -97,6 +97,7 @@
                 <constraint firstItem="Zl1-mb-IPG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="MgE-Ai-Vgr"/>
                 <constraint firstItem="Ble-NF-VPX" firstAttribute="top" secondItem="hvy-am-of0" secondAttribute="bottom" constant="2" id="NY2-zz-3ez"/>
                 <constraint firstItem="hvy-am-of0" firstAttribute="top" secondItem="V3p-el-mx9" secondAttribute="bottom" constant="2" id="Y3a-A9-SxE"/>
+                <constraint firstAttribute="bottom" secondItem="Zl1-mb-IPG" secondAttribute="bottom" constant="18" id="Zae-0c-eE5"/>
                 <constraint firstAttribute="trailing" secondItem="V3p-el-mx9" secondAttribute="trailing" constant="12" id="akc-Du-HHp"/>
                 <constraint firstAttribute="trailing" secondItem="GoH-eG-9Ja" secondAttribute="trailing" constant="25" id="e0R-27-QP5"/>
                 <constraint firstAttribute="trailing" secondItem="Zl1-mb-IPG" secondAttribute="trailing" constant="25" id="eUN-bE-eMd"/>
